--- a/sass/components/_singleThumbnail.scss
+++ b/sass/components/_singleThumbnail.scss
@@ -20,208 +20,208 @@
 	//KOZA
 
 	&--thumbnail-1 {
-		background-image: url('../../img/MINIATURY_360/KOZA_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/KOZA_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/KOZA_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/KOZA_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/KOZA_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/KOZA_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/KOZA_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/KOZA_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/KOZA_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/KOZA_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/KOZA_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/KOZA_2x.jpg');
 		}
 	}
 
 	//PIGEON
 
 	&--thumbnail-2 {
-		background-image: url('../../img/MINIATURY_360/PIGEON_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/PIGEON_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/PIGEON_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/PIGEON_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/PIGEON_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/PIGEON_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/PIGEON_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/PIGEON_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/PIGEON_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/PIGEON_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/PIGEON_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/PIGEON_2x.jpg');
 		}
 	}
 
 	//GLASS
 
 	&--thumbnail-3 {
-		background-image: url('../../img/MINIATURY_360/GLASS_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/GLASS_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/GLASS_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/GLASS_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/GLASS_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/GLASS_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/GLASS_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/GLASS_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/GLASS_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/GLASS_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/GLASS_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/GLASS_2x.jpg');
 		}
 	}
 
 	//MEWA
 
 	&--thumbnail-4 {
-		background-image: url('../../img/MINIATURY_360/MEWA_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/MEWA_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/MEWA_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/MEWA_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/MEWA_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/MEWA_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/MEWA_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/MEWA_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/MEWA_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/MEWA_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/MEWA_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/MEWA_2x.jpg');
 		}
 	}
 
 	//URBANEK
 
 	&--thumbnail-5 {
-		background-image: url('../../img/MINIATURY_360/URBANEK_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/URBANEK_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/URBANEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/URBANEK_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/URBANEK_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/URBANEK_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/URBANEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/URBANEK_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/URBANEK_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/URBANEK_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/URBANEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/URBANEK_2x.jpg');
 		}
 	}
 
 	//EABS
 
 	&--thumbnail-6 {
-		background-image: url('../../img/MINIATURY_360/EABS_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/EABS_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/EABS_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/EABS_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/EABS_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/EABS_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/EABS_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/EABS_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/EABS_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/EABS_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/EABS_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/EABS_2x.jpg');
 		}
 	}
 
 	//LASEK
 
 	&--thumbnail-7 {
-		background-image: url('../../img/MINIATURY_360/LASEK_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/LASEK_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/LASEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/LASEK_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/LASEK_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/LASEK_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/LASEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/LASEK_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/LASEK_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/LASEK_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/LASEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/LASEK_2x.jpg');
 		}
 	}
 
 	//ZAMEK
 
 	&--thumbnail-8 {
-		background-image: url('../../img/MINIATURY_360/ZAMEK_1x.jpg');
+		background-image: url('../../public/img/MINIATURY_360/ZAMEK_1x.jpg');
 
 		@media (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_360/ZAMEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_360/ZAMEK_2x.jpg');
 		}
 
-		@media (min-width: 768px){
-			background-image: url('../../img/MINIATURY_768/ZAMEK_1x.jpg');
+		@media (min-width: 768px) {
+			background-image: url('../../public/img/MINIATURY_768/ZAMEK_1x.jpg');
 		}
 
 		@media (min-width: 768px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_768/ZAMEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_768/ZAMEK_2x.jpg');
 		}
 
-		@media (min-width: 1024px){
-			background-image: url('../../img/MINIATURY_1200/ZAMEK_1x.jpg');
+		@media (min-width: 1024px) {
+			background-image: url('../../public/img/MINIATURY_1200/ZAMEK_1x.jpg');
 		}
 
 		@media (min-width: 1024px) and (min-resolution: 2dppx) {
-			background-image: url('../../img/MINIATURY_1200/ZAMEK_2x.jpg');
+			background-image: url('../../public/img/MINIATURY_1200/ZAMEK_2x.jpg');
 		}
 	}
 
@@ -241,10 +241,11 @@
 
 	&__p {
 		padding-left: 10%;
+		color: var(--white);
 
-		@media (min-width: 768px){
-			font-size: 1.2rem;
-		}
+		// @media (min-width: 768px) {
+		// 	font-size: 1.2rem;
+		// }
 	}
 }
 
