--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -14,9 +14,10 @@
 		display: grid;
 	}
 
-	@media (min-width: 992px) {
+	@media (min-width: 1200px) {
 		grid-template-columns: repeat(4, 1fr);
-		grid-auto-rows: 80px;
+
+		grid-auto-rows: max-content;
 		gap: 1.88rem;
 		border: 1px solid black;
 	}
@@ -27,17 +28,17 @@
 	}
 
 	&__p {
-		grid-row: auto;
+		grid-row: 2;
 	}
 
 	&__h2,
 	&__p {
-		width: 100%;
+		width: 320px;
 		grid-column: 3/-1;
 		border: 1px solid red;
 
 		@media (min-width: 768px) {
-			width: 75%;
+			width: 516px;
 		}
 
 		@media (min-width: 992px) {
@@ -50,24 +51,26 @@
 		flex-direction: column;
 		align-items: start;
 		gap: 30px;
-		width: 100%;
+		grid-column: 1/-1;
+		border: 1px green solid;
+		width: 320px;
 
-		// @media (min-width: 576px) {
-		// 	width: 576px;
-		// }
+		@media (min-width: 576px) {
+			width: 576px;
+		}
 
-		// @media (min-width: 768px) {
-		// 	width: 516px;
-		// }
+		@media (min-width: 768px) {
+			width: 516px;
+		}
 
 		@media (min-width: 992px) {
 			width: 668px;
-			grid-column: 1 / auto;
-			grid-row: 1 / auto;
 		}
 
 		@media (min-width: 1200px) {
 			width: 724px;
+			grid-column: 1 / auto;
+			grid-row: 1;
 		}
 	}
 
